--- a/.github/workflows/check_iptv.yml
+++ b/.github/workflows/check_iptv.yml
@@ -26,35 +26,23 @@ jobs:
           output_file="output.txt"
           temp_file="temp_output.txt"
           
-          # 清空临时文件
           echo -n "" > "$temp_file"
-          
           echo "Starting to check IPTV links..."
           
-          # 读取 iptv.txt 文件，一行一行处理
-          # IFS=',' 是为了告诉 read 命令以逗号作为分隔符
           while IFS=',' read -r name url; do
-            # 忽略空行或以 # 开头的注释行
             if [[ -z "$name" || "$name" =~ ^# ]]; then
               continue
             fi
             
-            # 使用 trim 函数去除 name 和 url 前后的多余空格
-            name=$(echo "$name" | xargs)
-            url=$(echo "$url" | xargs)
+            # 使用 Bash 内置的参数扩展来去除字符串前后的空格
+            # 这是最安全的方法，因为它不会受到引号的影响
+            name="${name// /}"
+            url="${url// /}"
 
             echo "Checking: $name - $url"
             
-            # 使用 curl 检查 URL 的 HTTP 状态码
-            # -s: 静默模式，不显示进度或错误信息
-            # -o /dev/null: 将输出丢弃
-            # -w "%{http_code}": 只输出 HTTP 状态码
-            # -m 10: 设置超时时间为 10 秒
-            # || true: 这一部分是关键！它确保即使 curl 命令因错误（如无法解析域名、连接超时）而失败，
-            #         整个脚本也不会停止，而是继续执行。
             http_code=$(curl -s -o /dev/null -w "%{http_code}" -m 10 "$url" || true)
             
-            # 如果 http_code 为空字符串，说明 curl 失败了，我们跳过这个链接
             if [[ "$http_code" -eq 200 ]]; then
               echo "✅ Valid: $name - $url"
               echo "$name,$url" >> "$temp_file"
@@ -63,11 +51,9 @@ jobs:
             fi
           done < iptv.txt
           
-          # 对结果进行排序并保存到 output.txt
           echo "Sorting and saving valid links to output.txt..."
           sort "$temp_file" -o "$output_file"
           
-          # 检查 output.txt 是否有变化
           if git diff --exit-code "$output_file"; then
             echo "No changes in output.txt, skipping commit."
             echo "::set-output name=has_changes::false"
@@ -86,5 +72,5 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main # 确保分支名称正确，比如 main 或 master
-          force: true # 强制推送，以避免因远程仓库有新提交而导致的冲突
+          branch: main
+          force: true
