--- a/.github/workflows/check_iptv.yml
+++ b/.github/workflows/check_iptv.yml
@@ -9,8 +9,8 @@ on:
     paths:
       - 'iptv.txt'
   schedule:
-    - cron: '0 0 * * *' # 每天 UTC 时间午夜运行
-  workflow_dispatch: # 允许手动触发
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   check-sources:
@@ -26,16 +26,16 @@ jobs:
           output_file="output.txt"
           temp_file="temp_output.txt"
           
-          echo -n "" > "$temp_file"
           echo "Starting to check IPTV links..."
+          
+          # 确保临时文件是空的
+          echo -n "" > "$temp_file"
           
           while IFS=',' read -r name url; do
             if [[ -z "$name" || "$name" =~ ^# ]]; then
               continue
             fi
             
-            # 使用 Bash 内置的参数扩展来去除字符串前后的空格
-            # 这是最安全的方法，因为它不会受到引号的影响
             name="${name// /}"
             url="${url// /}"
 
@@ -52,14 +52,16 @@ jobs:
           done < iptv.txt
           
           echo "Sorting and saving valid links to output.txt..."
+          
+          # 使用 sort 命令将有效链接进行排序，无论 temp_file 是否为空，都会生成 output.txt
           sort "$temp_file" -o "$output_file"
           
           if git diff --exit-code "$output_file"; then
             echo "No changes in output.txt, skipping commit."
-            echo "::set-output name=has_changes::false"
+            echo "has_changes=false" >> $GITHUB_OUTPUT
           else
             echo "Changes detected in output.txt, preparing to commit."
-            echo "::set-output name=has_changes::true"
+            echo "has_changes=true" >> $GITHUB_OUTPUT
             git config --global user.name "github-actions[bot]"
             git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add "$output_file"
